# IEC-61850-9-2_SV-Publisher_Fault-Injector

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SV_FAULT_INJECTOR_80.cid  main.c
cid_smpRate12/: SV_FAULT_INJECTOR_12.cid  Solution.bak
cid_smpRate80/: SV_FAULT_INJECTOR_80.cid  Solution.bak  Solution.sol
